--- a/notebooks/01_dataset_overview.ipynb
+++ b/notebooks/01_dataset_overview.ipynb
@@ -11,9 +11,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "rows: 120\n",
+            "columns: dict_keys(['sample_id', 'user_query', 'scenario_type', 'risk_level', 'reference_answer', 'required_safety_note', 'expected_action', 'source_reference', 'split'])\n"
+          ]
+        }
+      ],
       "source": [
         "import csv\n",
         "from pathlib import Path\n",
@@ -28,16 +37,23 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "version": "3.10"
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
   "nbformat_minor": 5
 }
-
